# aaa_definitivo

./: CMakeLists.txt  CMakeLists.txt~  README.txt~  controller_parameter.yaml~  mainpage.dox  mainpage.dox~  manifest.xml  manifest.xml~  msg_info.txt~
Varia/: ROSbag  ROSbag~  cfg_sentence  cfg_sentence~  max.yaml  min.yaml  msg_info.txt
cfg/: reconfigure.cfg  reconfigure.cfgc  reconfigure.cfg~
docs/: reconfigureConfig-usage.dox  reconfigureConfig.dox  reconfigureConfig.wikidoc
include/: SimulinkModel.h  SimulinkModel.hpp~  SimulinkModel.h~  SimulinkTest.hpp~
include/controller_simulink_ert_rtw/: buildInfo.mat  codeInfo.mat  controller_simulink.cpp  controller_simulink.h  controller_simulink.mk  controller_simulink_data.cpp  controller_simulink_private.h  controller_simulink_types.h  defines.txt  ert_main.cpp  modelsources.txt  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
launch/: definitivo.launch~  sl_controller.launch  sl_controller.launch~
msg/: PD_cross_track.msg~  P_along_track.msg~  P_cross_track.msg~  control_message.msg  controller_out.msg  delayed_feedback_control.msg~  frequency.msg~  init.msg~  output.msg  output.msg~  psi_debugging.msg  waypoint.msg  waypoint.msg~  weight.msg~
msg_gen/lisp/: AngleMeasStamped.lisp  DoubleArrayStamped.lisp  _package.lisp  _package_AngleMeasStamped.lisp  _package_DoubleArrayStamped.lisp  _package_control_message.lisp  _package_controller_out.lisp  ext_state.lisp  (+11 more)
src/: SimulinkModel.cpp  SimulinkModel.cpp~  SimulinkTest.cpp~  dynamic_reconfigure.cpp  dynamic_reconfigure.cpp~
(+47 files in other folders)
